log
Mon May  4 02:17:22 AM UTC 2026: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:14: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   47 |     if(!map) return;
      |              ^~~~~~
treemap.c:45:11: note: declared here
   45 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
4531128
